cmake_minimum_required(VERSION 3.5)

add_subdirectory(classes)
add_subdirectory(constructors)
add_subdirectory(copy_constructors)
add_subdirectory(structs)
add_subdirectory(polymorphism)
add_subdirectory(operators)
add_subdirectory(destructors)
add_subdirectory(templates)
add_subdirectory(copies)
add_subdirectory(inheritance)
